--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# RuffleCord
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+Here at RuffleCord We offer development services for discord bots, websites and minecraft servers!
