--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,5 @@
-# RuffleCord
+# RuffleCord Development
 
-Here at RuffleCord We offer development services for discord bots, websites and minecraft servers!
+We here at rufflecord offer development services for discord bots, minecraft and much much more!
+
+## Join our [discord](https://discord.rufflecord.tk) To learn more :D
